css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
  scroll-margin-top: 80px;
  scrollbar-width: thin;
}

body {
  font-family: "Quicksand", sans-serif;
  overflow-x: hidden;
}

header.navbar-container {
  position: sticky;
  top: 0;
  z-index: 1000;
  opacity: 0.9;
}

header.navbar-container .nav-list {
  display: flex;
  background-color: white;
  justify-content: space-around;
  height: 80px;
  align-items: center;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

header.navbar-container .nav-list {
  color: rgb(36, 124, 255);
}

header.navbar-container .nav-list ul {
  display: flex;
  list-style: none;
  position: absolute;
  right: 0;
  top: 0;
  width: 50vw;
  height: 100vh;
  justify-content: space-evenly;
  flex-direction: column;
  align-items: center;
  background-color: white;
  transform: translateX(100%);
  transition: all 1s;
  opacity: 0;
}

header.navbar-container .nav-list ul.slide {
  opacity: 1;
  transform: translateX(0);
}

header.navbar-container .nav-list li a {
  padding: 10px 20px;
  border-radius: 20px;
  color: black;
  text-decoration: none;
  transition: all 0.2s ease-in-out;
}

header.navbar-container .nav-list li:hover a {
  color: white;
  background-color: rgb(36, 124, 255);
}

.menu-toggle {
  display: flex;
  flex-direction: column;
  height: 20px;
  justify-content: space-between;
  position: relative;
}

.menu-toggle input {
  position: absolute;
  width: 40px;
  height: 28px;
  left: -5px;
  top: -5px;
  opacity: 0;
  cursor: pointer;
  z-index: 2;
}

.menu-toggle span {
  display: block;
  width: 28px;
  height: 3px;
  background-color: rgb(36, 124, 255);
  border-radius: 3px;
  transition: all 0.5s;
}

.menu-toggle span:nth-child(2) {
  transform-origin: 0 0;
}

.menu-toggle span:nth-child(4) {
  transform-origin: 0 100%;
}

.menu-toggle input:checked ~ span:nth-child(2) {
  transform: rotate(45deg) translate(-1px, -1px);
}

.menu-toggle input:checked ~ span:nth-child(4) {
  transform: rotate(-45deg) translate(-1px, 0);
}

.menu-toggle input:checked ~ span:nth-child(3) {
  transform: scale(0);
}

main {
  padding: 0;
}

main .jumbotron {
  padding: 4rem 4rem;
  flex: 1;
  display: flex;
  align-items: center;
  flex-direction: column;
}

main .jumbotron .jumbotron-description {
  flex: 1;
  order: 2;
  text-align: center;
}

main .jumbotron .jumbotron-description .title {
  margin-block: 1rem;
  font-size: 1.8rem;
}

main .jumbotron .jumbotron-description p {
  font-size: 1.2rem;
  line-height: 1.7rem;
}

main .jumbotron .jumbotron-description .social-media ul {
  list-style: none;
  display: flex;
  gap: 1.5rem;
  padding-top: 1rem;
  justify-content: center;
}

main .jumbotron .jumbotron-description .social-media ul li a {
  font-size: 1.5rem;
  color: black;
  transition: all 0.1s ease-in-out;
}

main .jumbotron .jumbotron-description .social-media ul li a:hover {
  color: rgb(36, 124, 255);
}

main .jumbotron .jumbotron-description button {
  padding: 0.8rem 2.5rem;
  border: 3px solid transparent;
  border-radius: 999px;
  margin-block-start: 2rem;
  background-color: rgb(36, 124, 255);
  font-family: "Quicksand", sans-serif;
  text-transform: uppercase;
  font-size: 1rem;
  font-weight: 700;
  color: white;
  cursor: pointer;
  transition: all 0.15s ease-in;
}

main .jumbotron .jumbotron-description button:hover {
  border: 3px solid #2d3e50;
  background-color: transparent;
  color: #2d3e50;
}

main .jumbotron .jumbotron-image {
  flex: 1;
  display: flex;
  order: 1;
  width: 300px;
  min-width: 250px;
}

main .jumbotron .jumbotron-image img {
  width: 400px;
  min-width: 250px;
  margin: auto;
  border-radius: 999px;
  padding: 10px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

main .portfolio {
  padding: 4rem 4rem;
  display: flex;
  background-color: rgb(218, 218, 218);
  text-align: center;
  flex-direction: column;
}

main .portfolio .portfolio-description {
  padding-bottom: 4rem;
}

main .portfolio .card-container {
  display: flex;
  gap: 3rem;
  flex-direction: column;
  justify-content: center;
}

main .portfolio .portfolio-card {
  width: auto;
  display: flex;
  border-radius: 5px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  flex-direction: column;
  text-align: start;
}

main .portfolio .portfolio-card .card-image img {
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  width: 100%;
}

main .portfolio .portfolio-card .card-content {
  padding: 10px;
  overflow: auto;
}

main .portfolio .portfolio-card .card-content h3 {
  padding-bottom: 10px;
}

main .clients::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url("/img/clients-background.png");
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  filter: blur(5px) grayscale(70%);
  z-index: -1;
}

main .clients {
  padding: 4rem 4rem;
  display: flex;
  text-align: center;
  flex-direction: column;
  position: relative;
}

main .clients .clients-description h2 {
  color: rgb(82, 82, 82);
}

main .clients .clients-description h1 {
  color: white;
  padding-bottom: 4rem;
}

main .clients .logo-container {
  display: flex;
  gap: 3rem;
  flex-direction: column;
  align-items: center;
}

main .clients .logo-image {
  width: 150px;
  display: flex;
  flex-direction: column;
  filter: grayscale(100%);
  transition: filter 0.3s ease;
  cursor: pointer;
}

main .clients .logo-image:hover {
  filter: grayscale(0%);
}

main .clients .logo-image img {
  width: 100%;
}

main .contact-me {
  padding: 4rem 4rem;
  display: flex;
  background-color: white;
  text-align: center;
  flex-direction: column;
  align-items: center;
}

main .contact-me .contact-description {
  color: rgb(36, 124, 255);
  padding-bottom: 4rem;
}

main .contact-me .form-contact {
  width: 100%;
  text-align: start;
}

main .contact-me .form-contact .form-group {
  margin-bottom: 1rem;
}

main .contact-me .form-contact .form-group label {
  color: rgb(36, 124, 255);
}

main .contact-me .form-contact .form-group input,
textarea {
  width: 100%;
  padding: 0.5rem 0.5rem;
  margin-top: 0.5rem;
}

main .contact-me .form-contact .form-group button {
  width: 100%;
  padding: 0.8rem 2.5rem;
  border: 3px solid transparent;
  border-radius: 999px;
  margin-block-start: 2rem;
  background-color: rgb(36, 124, 255);
  font-family: "Quicksand", sans-serif;
  text-transform: uppercase;
  font-size: 1rem;
  font-weight: 700;
  color: white;
  cursor: pointer;
  transition: all 0.15s ease-in;
}

main .contact-me .form-contact .form-group button:hover {
  border: 3px solid #2d3e50;
  background-color: transparent;
  color: #2d3e50;
}

footer {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: black;
  color: white;
  height: 80px;
}

.scroll-to-top {
  position: fixed;
  bottom: 20px;
  right: 20px;
  background-color: rgb(36, 124, 255);
  width: 50px;
  height: 50px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: background-color 0.3s ease;
  cursor: pointer;
}

.scroll-to-top a {
  background-color: rgb(36, 124, 255);
  width: 100%;
  height: 100%;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  text-decoration: none;
  font-size: 1.5rem;
}

.scroll-to-top a:hover {
  background-color: #2d3e50;
}

@media screen and (min-width: 576px) {
  header.navbar-container .nav-list ul {
    width: 400px;
  }
}

@media screen and (min-width: 768px) {
  header.navbar-container .nav-list ul {
    display: flex;
    width: 500px;
    height: auto;
    justify-content: space-between;
    flex-direction: row;
    position: static;
    opacity: 1;
    transform: translateX(0);
    transition: none;
  }

  header.navbar-container .nav-list li a {
    padding: 10px 20px;
    border-radius: 20px;
    color: black;
    text-decoration: none;
    transition: all 0.2s ease-in-out;
  }

  .menu-toggle {
    display: none;
  }

  main {
    width: 100%;
    margin-inline: auto;
    align-items: center;
  }

  main .jumbotron {
    padding: 4rem 4rem;
    flex-direction: row;
  }

  main .jumbotron .jumbotron-description {
    order: 1;
    text-align: left;
  }

  main .jumbotron .jumbotron-description .title {
    font-size: 2.5rem;
  }

  main .jumbotron .jumbotron-description .social-media ul {
    justify-content: start;
  }

  main .jumbotron .jumbotron-image {
    order: 2;
  }

  main .portfolio .card-container {
    flex-wrap: wrap;
    flex-direction: row;
  }

  main .portfolio .portfolio-card {
    width: 40%;
  }

  main .clients .logo-container {
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
  }

  main .contact-me .form-contact {
    max-width: 800px;
    text-align: start;
  }
}

@media screen and (min-width: 992px) {
  header.navbar-container .nav-list {
    justify-content: space-between;
    padding: 0 90px;
  }

  header.navbar-container .nav-list ul {
    width: 600px;
  }

  main .jumbotron {
    padding: 6rem 8rem;
  }

  main .jumbotron .jumbotron-description .title {
    font-size: 3rem;
  }
}

@media screen and (min-width: 1200px) {
  header.navbar-container .nav-list {
    justify-content: space-between;
    padding: 0 150px;
  }

  header.navbar-container .nav-list ul {
    width: 650px;
  }

  header.navbar-container .nav-list .logo {
    font-size: 1.1rem;
  }

  header.navbar-container .nav-list li a {
    font-size: 1.1rem;
  }

  main .jumbotron {
    padding: 6rem 12rem;
  }

  main .jumbotron .jumbotron-image img {
    width: 450px;
  }
}

